dice challenge done in 15 mins!

--- a/Dicee+Challenge+-+Starting+Files/dicee.html
+++ b/Dicee+Challenge+-+Starting+Files/dicee.html
@@ -11,19 +11,25 @@
   </head>
   <body>
     <div class="container">
-      <h1>Refresh Me</h1>
+      <h1>Who will win?</h1>
+
+      <div class="play-btn">
+        <button id="playBtn">Play</button>
+      </div>
 
       <div class="dice">
         <p>Player 1</p>
-        <img class="img1" src="" />
+        <img class="img1" src="images/dice6.png" />
       </div>
 
       <div class="dice">
         <p>Player 2</p>
-        <img class="img2" src="" />
+        <img class="img2" src="images/dice6.png" />
       </div>
     </div>
 
     <footer>www 🎲 App Brewery 🎲 com</footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
